@@ -9,7 +9,7 @@
 .\"
 .\" Created: Sun May  7 00:14:37 1995 ylo
 .\"
-.\" $OpenBSD: scp.1,v 1.18 2001/09/05 06:23:07 deraadt Exp $
+.\" $OpenBSD: scp.1,v 1.19 2001/09/17 17:57:56 stevesk Exp $
 .\"
 .Dd September 25, 1999
 .Dt SCP 1
@@ -20,6 +20,7 @@
 .Sh SYNOPSIS
 .Nm scp
 .Op Fl pqrvC46
+.Op Fl F Ar ssh_config
 .Op Fl S Ar program
 .Op Fl P Ar port
 .Op Fl c Ar cipher
@@ -92,6 +93,12 @@ Passes the
 flag to
 .Xr ssh 1
 to enable compression.
+.It Fl F Ar ssh_config
+Specifies an alternative
+per-user configuration file for
+.Nm ssh .
+This option is directly passed to
+.Xr ssh 1 .
 .It Fl P Ar port
 Specifies the port to connect to on the remote host.
 Note that this option is written with a capital
