@@ -8,6 +8,10 @@
     put somewhere sane. Add Ssh.bin to manifest.
  - (djm) Make smartcard support conditional in Redhat RPM spec
  - (bal) LICENCE update.  Has not been done in a while.
+ - OpenBSD CVS Sync
+   - stevesk@cvs.openbsd.org 2001/09/17 17:57:57
+     [scp.1 scp.c sftp.1 sftp.c]
+     add -Fssh_config option; ok markus@
 
 20010917
  - (djm) x11-ssh-askpass-1.2.4 in RPM spec, revert workarounds
@@ -6468,4 +6472,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1531 2001/09/18 05:36:27 mouring Exp $
+$Id: ChangeLog,v 1.1532 2001/09/18 05:38:44 mouring Exp $
